# SimpleElectronTracer

./: CMakeLists.txt  README.md  config.json  performance_tests.txt  test_results.txt
benchmarks/: CMakeLists.txt  make_step_benchmark.cpp  rand_vel_benchmark.cpp
include/: loader.hpp  math.hpp  particle.hpp  reflector.hpp  surface.hpp  utils.hpp
scripts/: count_particles.py  plot_pt_dist.py
src/: CMakeLists.txt  electron_tracer.cpp  electron_tracer.h  loader.cpp  main.cpp  math.cpp  particle.cpp  particle.hpp  reflector.cpp  reflector.hpp  surface.cpp  surface.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  main.cpp  matrix_tests.cpp  particle_tests.cpp  reflector_tests.cpp  surface_tests.cpp  tracer_tests.cpp  utils_tests.cpp  vector_tests.cpp
